--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link href="style.css" rel="stylesheet">
+	<script src="script.js"></script>
 </head>
 <body>
 	<ul>
